--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
-    "name":"Detect-CMS",
-    "type":"library",
+    "name": "jezzdk/Detect-CMS",
+    "description": "PHP Library for detecting CMS",
+    "require": {
+        "php": "^7.3"
+    },
     "autoload":{
         "psr-0":{
             "DetectCMS":"src/"
